# hyperjs

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  HANDLERS_SUMMARY.md  HANDLER_MACRO_GUIDE.md  README.md  browser.js  build.rs  hyperjs.wasi-browser.js  hyperjs.wasi.cjs  index.d.ts  index.js  index.ts  package.json  server.js  server.ts  tsconfig.json
.github/workflows/: CI.yml
__test__/: echo.spec.ts  end.spec.ts  format.spec.ts  health.spec.ts  index.spec.ts  method.spec.ts  redirect.spec.ts  request.spec.ts  response.spec.ts  server-setup.ts  server.ts  tsconfig.json  utilities.spec.ts
__test__/middlewares/: cookie_parser.spec.ts  json.spec.ts  raw.spec.ts  static.spec.ts  text.spec.ts  urlencoded.spec.ts
__test__/request/: accepts.spec.ts  method.spec.ts  range.spec.ts
__test__/response/: append.spec.ts  attachment.spec.ts  clear_cookie.spec.ts  content_type.spec.ts  cookie.spec.ts  download.spec.ts  end.spec.ts  format.spec.ts  links.spec.ts  location.spec.ts  redirect.spec.ts  send_file.spec.ts  set.spec.ts  vary.spec.ts
examples/: hello.js
handlers/: asyncHandler.js  createUserHandler.js  dataHandler.js  dbHandler.js  deleteUserHandler.js  helloHandler.js  updateUserHandler.js  userHandler.js
hyperjs-core/: dts-header.d.ts  index.d.ts  index.js
public/: .dotfile.html  alternative_index.html
src/: execute_handler.rs  handle_route.rs  js_handler_manager.rs  js_worker_sync.rs  lib.rs  load_handler.rs  main.rs  utilities.rs  version.rs  worker_message.rs
src/body_util/: full.rs
src/bytes/: mod.rs
src/middlewares/: cookie_parser.rs  json.rs  mod.rs  raw.rs  text.rs  urlencoded.rs
src/middlewares/static_/: mod.rs  task.rs
src/ops/: db_query.rs  mod.rs
src/request/: accepts.rs  body.rs  body_ref.rs  body_request.rs  builder.rs  error.rs  get.rs  interface.rs  method.rs  mod.rs  params.rs  range.rs  version.rs  wrapped_request.rs
src/response/: append.rs  attachment.rs  body_ref.rs  body_response.rs  builder.rs  clear_cookie.rs  content_type.rs  cookie.rs  cookie_options.rs  download.rs  formut.rs  get.rs  json.rs  links.rs  location.rs  mod.rs  redirect.rs  response_ref.rs  send.rs  send_file.rs  send_status.rs  set.rs  status.rs  status_code.rs  vary.rs  wrapped_response.rs
src/router/: mod.rs
src/server/: _listen_tcp.rs  complete_request.rs  create_handler_task.rs  get_next_id.rs  handle_http_request.rs  listen_ipc.rs  listen_tcp.rs  mod.rs  register_middleware.rs  register_route.rs  request_context.rs  systemd_notify.rs
src/utilities/: assert_header_exists.rs  body_from_status_code.rs  contains_dot_file.rs  content_disposition.rs  decimal_to_binary_unit.rs  empty.rs  encode_url.rs  extract_cookies.rs  full.rs  guess_media_type.rs  js_date_to_system_time.rs  json_to_napi.rs  json_value_as_string.rs  mod.rs  object_to_header_map.rs  parse_range.rs  parse_url.rs  parse_urlencoded.rs  serialize_napi_object.rs  type_is.rs
src/utilities/file_send_task/: create_html_document.rs  file_send_task_tests.rs  mod.rs  options.rs  parity_tests.rs  requested_path.rs
