
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name = "hyperjs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ammonia = "4.1.2"
askama_escape = "0.15.2"
byte-unit = "5.2.0"
bytes = "1.11.0"
chrono = "0.4.43"
env_logger = "0.11.9"
futures = "0.3.31"
headers-accept = "0.3.0"
headers-core = "0.3.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-range-header = "0.4.2"
httpdate = "1.0.3"
hyper-staticfile = "0.10.1"
lazy_static = "1.5.0"
log = "0.4.29"
matchit = "0.9.1"
mediatype = "0.21.0"
mime_guess = "2.0.5"
napi-derive = "3.0.0"
percent-encoding = "2.3.2"
regex = "1.12.3"
rustls-acme = {version = "0.15.1", features = ["tokio"]}
serde_json = "1.0.148"
serde_qs = "1.0.0"
serde_urlencoded = "0.7.1"
tempfile = "3.24.0"
tokio-stream = {version = "0.1.18", features = ["net"]}
urlencoding = "2.1.3"

[dependencies.cookie]
features = ["percent-encode", "secure"]
version = "0.18.1"

[dependencies.etag]
features = ["std"]
version = "4.0.0"

[dependencies.hyper]
features = ["full"]
version = "1.8.1"

[dependencies.hyper-util]
features = ["tokio"]
version = "0.1.19"

[dependencies.napi]
features = ["napi6", "async", "serde", "serde-json"]
version = "3.0.0"

[dependencies.tokio]
features = ["rt", "net", "rt-multi-thread", "macros"]
version = "1.48.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[target.'cfg(unix)'.dependencies]
sd-notify = "0.5.0"
